<resources>
    <string name="app_name">DataBaseAccess</string>
    <string name="database_access">DataBase Access</string>
    <string name="firebase_mysql_other">Firebase/SQLite/MongoDB</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="go">GO</string>
</resources>
