<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UponEntranceActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">
    
    <ImageView
        android:id="@+id/transparentLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="db_logo"
        android:src="@drawable/db_transparent_logo"/>

    <TextView
        android:id="@+id/transparentLogoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="greeting_text"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/infoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:transitionName="under_greeting_text"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/mid_rel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_below="@+id/usernameText">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/goBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#000"
            android:onClick="loginUser"
            android:text="@string/go"
            android:textColor="#fff"
            android:layout_below="@+id/passwordText"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:onClick="callSignUpScreen"
            android:text="New User? SIGN UP"
            android:textColor="#000"
            android:layout_below="@+id/goBtn"/>


        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress"
            android:maxWidth="10dp"
            android:maxHeight="35dp"
            android:minWidth="10dp"
            android:minHeight="35dp" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/other_dbs"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/other_db_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/db_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="changeDatabase"
            android:src="@drawable/ic_more_vert_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/other_dbs"
            app:layout_constraintTop_toTopOf="@+id/other_dbs"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>